Fixed crashing, added thread synchronization, code refactoring

--- a/DjvuApp/Controls/DocumentViewer.xaml
+++ b/DjvuApp/Controls/DocumentViewer.xaml
@@ -8,6 +8,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400"
     Loaded="LoadedHandler"
+    Unloaded="UnloadedHandler"
     LayoutUpdated="LayoutUpdatedHandler">
 
     <UserControl.Resources>
