--- a/DjvuApp/Pages/AboutPage.xaml
+++ b/DjvuApp/Pages/AboutPage.xaml
@@ -48,7 +48,7 @@
         </Style>
     </Page.Resources>
 
-    <Page.Transitions>
+    <!--<Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
                 <NavigationThemeTransition.DefaultNavigationTransitionInfo>
@@ -56,7 +56,7 @@
                 </NavigationThemeTransition.DefaultNavigationTransitionInfo>
             </NavigationThemeTransition>
         </TransitionCollection>
-    </Page.Transitions>
+    </Page.Transitions>-->
 
     <Pivot Title="DJVU READER">
         <PivotItem Header="about">
