--- a/DjvuApp/Pages/MainPage.xaml
+++ b/DjvuApp/Pages/MainPage.xaml
@@ -46,13 +46,33 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Text="DJVU READER" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
-            <TextBlock Grid.Row="1" Text="my library" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
-            <TextBlock Grid.Row="0" Text="TRIAL VERSION, ? DAYS LEFT" Margin="0,0,12,0" x:Name="trialExpirationTextBlock" HorizontalAlignment="Right" VerticalAlignment="Bottom" Foreground="Red" Style="{StaticResource BaseTextBlockStyle}"/>
+            <TextBlock
+                x:Uid="ApplicationTitle"
+                Grid.Row="0" 
+                Margin="0,12,0,0"
+                Text="DJVU READER" 
+                Style="{ThemeResource TitleTextBlockStyle}"/>
+            <TextBlock
+                x:Uid="MainPage_Title"
+                Grid.Row="1" 
+                Margin="0,-6.5,0,26.5"
+                Text="my library"
+                Style="{ThemeResource HeaderTextBlockStyle}"
+                CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
+            <TextBlock
+                x:Name="trialExpirationTextBlock"
+                Grid.Row="0" 
+                Margin="0,0,12,0"
+                Text="ОСТАЛОСЬ ? ДНЕЙ"
+                HorizontalAlignment="Right" 
+                VerticalAlignment="Bottom"
+                Foreground="Red" 
+                Style="{StaticResource BaseTextBlockStyle}"/>
         </Grid>
 
         <Grid Grid.Row="1">
             <TextBlock 
+                x:Uid="MainPage_BookListEmptyHint"
                 Style="{StaticResource ListViewEmptyStaticTextBlockStyle}" 
                 Margin="19,0,19,0"
                 Text="Tap the plus sign to add a new book."
@@ -79,17 +99,20 @@
                             <common:MenuFlyoutService.MenuFlyout>
                                 <MenuFlyout>
                                     <MenuFlyoutItem 
+                                        x:Uid="MainPage_RenameMenuItem"
                                         Command="{Binding DataContext.RenameBookCommand, ElementName=page}"
                                         CommandParameter="{Binding}"
-                                        Text="rename"/>
+                                        Text="rename..."/>
                                     <MenuFlyoutItem
+                                        x:Uid="MainPage_RemoveMenuItem"
                                         Command="{Binding DataContext.RemoveBookCommand, ElementName=page}"
                                         CommandParameter="{Binding}"
                                         Text="remove"/>
                                     <MenuFlyoutItem
+                                        x:Uid="MainPage_ShareMenuItem"
                                         Command="{Binding DataContext.ShareBookCommand, ElementName=page}"
                                         CommandParameter="{Binding}"
-                                        Text="share"/>
+                                        Text="share..."/>
                                 </MenuFlyout>
                             </common:MenuFlyoutService.MenuFlyout>
                             <Grid.RowDefinitions>
@@ -130,16 +153,19 @@
         <CommandBar>
             <CommandBar.PrimaryCommands>
                 <AppBarButton
+                    x:Uid="MainPage_AddAppBarButton"
                     Icon="Add"
                     Label="add"
                     Command="{Binding AddBookCommand}"/>
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
                 <AppBarButton
+                    x:Uid="MainPage_BuyAppBarButton"
                     x:Name="buyAppBarButton"
                     Label="buy application"
                     Click="BuyButtonClickHandler"/>
                 <AppBarButton
+                    x:Uid="MainPage_AboutAppBarButton"
                     Label="about"
                     Click="AboutButtonClickHandler"/>
             </CommandBar.SecondaryCommands>
