--- a/DjvuApp/Dialogs/Internal/OutlineDialogInternal.xaml
+++ b/DjvuApp/Dialogs/Internal/OutlineDialogInternal.xaml
@@ -1,16 +1,17 @@
-<ContentDialog
+﻿<ContentDialog
     x:Class="DjvuApp.Dialogs.Internal.OutlineDialogInternal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:outline="using:DjvuApp.Model.Outline"
     mc:Ignorable="d"
     Title="{Binding Title}"
-    Style="{StaticResource FullScreenContentDialogStyle}"
-    d:DataContext="{d:DesignInstance outline:FakeOutlineItem}">
+    FullSizeDesired="True"
+    Style="{StaticResource FullScreenContentDialogStyle}" 
+	d:DataContext="{d:DesignData /SampleData/OutlineSampleDataSource/OutlineSampleDataSource.xaml}">
 
     <ListView
+        Margin="-20,0"
         ItemsSource="{Binding Items}"
         ItemClick="ItemClickHandler"
         IsItemClickEnabled="True">
@@ -21,22 +22,24 @@
         </ItemsControl.ItemContainerStyle>
         <ItemsControl.ItemTemplate>
             <DataTemplate>
-                <Grid Margin="0,12">
+                <Grid Margin="22.5,10,0,10" MinHeight="57.5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock
+						Grid.Column="0"
                         Text="{Binding Title}"
                         TextWrapping="Wrap"
                         VerticalAlignment="Center"
-                        Style="{StaticResource ListViewItemTextBlockStyle}"/>
+                        Style="{StaticResource ListViewItemTextBlockStyle}" />
                     <Button
                         Grid.Column="1"
+						Padding="20,10"
                         Visibility="{Binding HasItems, Converter={StaticResource BooleanToVisibilityConverter}}"
-                        Click="ButtonBase_OnClick">
-                        <SymbolIcon Symbol="Forward"/>
-                    </Button>
+                        Click="ButtonBase_OnClick" Style="{StaticResource CircleButtonStyle}">
+						<SymbolIcon Symbol="Forward"/>
+					</Button>
                 </Grid>
             </DataTemplate>
         </ItemsControl.ItemTemplate>
