--- a/DjvuApp/Pages/MainPage.xaml
+++ b/DjvuApp/Pages/MainPage.xaml
@@ -9,6 +9,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     DataContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
+    d:DataContext="{d:DesignData /SampleData/MainPageSampleDataSource/MainPageSampleDataSource.xaml}"
     x:Name="page">
 
     <Page.Transitions>
@@ -63,7 +64,6 @@
                 x:Name="trialExpirationTextBlock"
                 Grid.Row="0" 
                 Margin="0,0,12,0"
-                Text="ОСТАЛОСЬ ? ДНЕЙ"
                 HorizontalAlignment="Right" 
                 VerticalAlignment="Bottom"
                 Foreground="Red" 
@@ -125,6 +125,7 @@
                             </Grid.ColumnDefinitions>
                             <Image
                                 Height="42.5"
+                                Width="33"
                                 Stretch="Uniform"
                                 Margin="0,-3,16,3"
                                 Grid.RowSpan="2"
